fixed spacing issue and set default dashboard to parallel plot

--- a/src/sass/components/_panelView.scss
+++ b/src/sass/components/_panelView.scss
@@ -1,5 +1,6 @@
 .panelViewRoot {
     display: inline-block;
+    padding-left: 15px;
     .panel-label {
         fill: white;
         font-weight: bold;
