--- a/src/sass/components/_radioButton.scss
+++ b/src/sass/components/_radioButton.scss
@@ -30,8 +30,8 @@
         height: 10px;
         background: #2a747a;
         position: absolute;
-        top: 4px;
-        left: 4px;
+        top: 5px;
+        left: 5px;
         border-radius: 100%;
         -webkit-transition: all 0.2s ease;
         transition: all 0.2s ease;
