--- a/src/sass/pages/_dashboard.scss
+++ b/src/sass/pages/_dashboard.scss
@@ -1,10 +1,12 @@
 .dashboard-root {
+    * {
+        box-sizing: border-box;
+    }
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     font-size: 10px;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
     line-height: 1.5;
     color: #cfd2da;
@@ -24,6 +26,9 @@
         margin-right: 10px;
         font-size: 22px;
         font-weight: bold;
+    }
+    .loading-spinner {
+        margin: 100px auto;
     }
 }
 
